FIX on iphone5 the text for "Oops, nothing here yet" is overlapping the text below

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1141,7 +1141,7 @@ div[mobiscroll-mode="predefined"] input {
 /** No activities in Diary **/
 
 .no-activities{
-    width: 170px;
+    width: 230px;
     text-align: center;
     margin: auto auto;
 }
